{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 81,
  "lineage": "be2197f2-7975-5cc1-8689-5364fba2373d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:775296258551:internet-gateway/igw-0a3b0d5f706dcd493",
            "id": "igw-0a3b0d5f706dcd493",
            "owner_id": "775296258551",
            "region": "us-east-1",
            "vpc_id": "vpc-076632c52eafe1f07"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:775296258551:loadbalancer/app/mascotas-alb/d8bd2bb0bef0dc07",
            "arn_suffix": "app/mascotas-alb/d8bd2bb0bef0dc07",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "mascotas-alb-1019600993.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:775296258551:loadbalancer/app/mascotas-alb/d8bd2bb0bef0dc07",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mascotas-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-034b14a72b2919d38"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09c4951df9341e7ef"
              },
              {
                "subnet_id": "subnet-0c7c8efecdb153adc"
              }
            ],
            "subnets": [
              "subnet-09c4951df9341e7ef",
              "subnet-0c7c8efecdb153adc"
            ],
            "vpc_id": "vpc-076632c52eafe1f07",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:775296258551:loadbalancer/app/mascotas-alb/d8bd2bb0bef0dc07"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet",
            "aws_subnet.public_subnet_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:775296258551:listener/app/mascotas-alb/d8bd2bb0bef0dc07/ce8916fa20ea349e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:775296258551:targetgroup/mascotas-tg/6e171fd02e0509e9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:775296258551:listener/app/mascotas-alb/d8bd2bb0bef0dc07/ce8916fa20ea349e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:775296258551:loadbalancer/app/mascotas-alb/d8bd2bb0bef0dc07",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:775296258551:listener/app/mascotas-alb/d8bd2bb0bef0dc07/ce8916fa20ea349e"
          },
          "dependencies": [
            "aws_lb.app_lb",
            "aws_lb_target_group.tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet",
            "aws_subnet.public_subnet_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:775296258551:targetgroup/mascotas-tg/6e171fd02e0509e9",
            "arn_suffix": "targetgroup/mascotas-tg/6e171fd02e0509e9",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api/pets",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:775296258551:targetgroup/mascotas-tg/6e171fd02e0509e9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "mascotas-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-076632c52eafe1f07"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:775296258551:targetgroup/mascotas-tg/6e171fd02e0509e9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a3b0d5f706dcd493",
            "id": "r-rtb-0241e642536548d631080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0241e642536548d63",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "775296258551",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0241e642536548d63"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_rt",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:775296258551:route-table/rtb-0241e642536548d63",
            "id": "rtb-0241e642536548d63",
            "owner_id": "775296258551",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-076632c52eafe1f07"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "775296258551",
            "id": "rtb-0241e642536548d63",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02fa6fff212590be7",
            "region": "us-east-1",
            "route_table_id": "rtb-0241e642536548d63",
            "subnet_id": "subnet-0c7c8efecdb153adc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4c3470326ee4ca7",
            "region": "us-east-1",
            "route_table_id": "rtb-0241e642536548d63",
            "subnet_id": "subnet-09c4951df9341e7ef"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:775296258551:security-group/sg-034b14a72b2919d38",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-034b14a72b2919d38",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "775296258551",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-076632c52eafe1f07"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "775296258551",
            "id": "sg-034b14a72b2919d38",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:775296258551:security-group/sg-095f472dbac6f6c2d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-095f472dbac6f6c2d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-034b14a72b2919d38"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "ecs-sg",
            "name_prefix": "",
            "owner_id": "775296258551",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-076632c52eafe1f07"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "775296258551",
            "id": "sg-095f472dbac6f6c2d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:775296258551:subnet/subnet-0c7c8efecdb153adc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7c8efecdb153adc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "775296258551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-076632c52eafe1f07"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "775296258551",
            "id": "subnet-0c7c8efecdb153adc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:775296258551:subnet/subnet-09c4951df9341e7ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c4951df9341e7ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "775296258551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-076632c52eafe1f07"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "775296258551",
            "id": "subnet-09c4951df9341e7ef",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:775296258551:vpc/vpc-076632c52eafe1f07",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-033ec51bf24bc4ce6",
            "default_route_table_id": "rtb-0361907c86a682921",
            "default_security_group_id": "sg-096a702e8337f5cf4",
            "dhcp_options_id": "dopt-09c69fe7fd0bf9366",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-076632c52eafe1f07",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0361907c86a682921",
            "owner_id": "775296258551",
            "region": "us-east-1",
            "tags": {
              "Name": "mascotas-vpc"
            },
            "tags_all": {
              "Name": "mascotas-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "775296258551",
            "id": "vpc-076632c52eafe1f07",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}